# Pick-and-place

./: .gitignore  README.md  assimp_log.txt  rwsettings.xml
PickNPlace/: CMakeLists.txt  pickAndPlace.cpp
Project_WorkCell/: Scene.wc.xml  SceneCollisionSetup.prox.xml  Scene_rap_blue.wc.xml  Scene_rap_green.wc.xml  Scene_rap_red.wc.xml  rwsettings.xml  visu.rwplay
Project_WorkCell/UR5/UR-6-85-5-A/: Device.wc.xml
Project_WorkCell/collisions_heatmap/: ns_ra_blue.txt  ns_ra_green.txt  ns_ra_red.txt  ns_rap_blue.txt  ns_rap_green.txt  ns_rap_red.txt  pick_image.txt  place_image.txt  ra_blue.txt  ra_green.txt  ra_red.txt
Project_WorkCell/wsg50/: wsg50.xml
Robotics/: CMakeCache.txt  CMakeLists.txt  Makefile  assimp_log.txt  cmake_install.cmake  reachability.cpp  rwsettings.xml
Robotics/MotionPlanning/: CMakeLists.txt  motionplanning.cpp
Robotics/Reachability/: reachability.cpp
Vision/DepthSensor/: CMakeLists.txt  CylinderBlue.pcd  CylinderGreen.pcd  CylinderRed.pcd  SmallerCylinderBlue.pcd  SmallerCylinderGreen.pcd  SmallerCylinderRed.pcd  depthSensor.cpp  depthSensor_unclassified.cpp
Vision/DepthSensor/Cylinders/: SmallerCylinderBlue.pcd  SmallerCylinderGreen.pcd  SmallerCylinderRed.pcd
Vision/SparseStereo/: CMakeCache.txt  CMakeLists.txt  CMakeListsJacob.txt  Image.ppm  Makefile  assimp_log.txt  cmake_install.cmake  methods.hpp  rwsettings.xml  sparseStereo  sparseStereo.cpp
Vision/SparseStereo/Images/: left_image.ppm
scripts/: DS.m  RRT.m  SS.m  TrajectoryPlots.m  heatmap.py  trajectoryPlotter.py
